# eta-ui

./: .env.example  README.md  SETUP.md  TODO.md  pyproject.toml  requirements.txt
backend/: app.py  arrival_detector.py  config.py  database.py  multi_stop_service.py  multi_stop_session.py  prediction_service.py  prediction_session.py
eta_prediction/eta_service/: estimator.py
frontend/: app.js  index.html  multi-stop.js  styles.css
