[project]
name = "eta-ui"
version = "0.1.0"
description = "Live ETA prediction tracking and validation UI"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy>=2.0.25",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
    "python-multipart>=0.0.6",
    "websockets>=12.0",
    "requests>=2.31.0",
    # eta_prediction deps (added via sys.path, not installed as a package)
    "numpy>=1.26",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "xgboost>=2.0",
    "holidays>=0.40",
    "gtfs-realtime-bindings>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.uv]
dev-dependencies = []
